hphp/hack/test/typecheck/readonly/lambda.php.exp
File "lambda.php", line 17, characters 5-6:
This value is readonly, its properties cannot be modified (Typing[4409])
File "lambda.php", line 19, characters 5-6:
This value is readonly, its properties cannot be modified (Typing[4409])
